force-app/main/default/objects/Product2/fields/AvailabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityStatus__c</fullName>
    <label>Availability Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En stock</fullName>
                <default>true</default>
                <label>En stock</label>
            </value>
            <value>
                <fullName>En arrivage</fullName>
            </value>
            <value>
                <fullName>Épuisé</fullName>
            </value>
            <value>
                <fullName>Sur commande 48h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>