force-app/main/default/objects/Product2/fields/CoOccurrenceScore__c.field-meta.xml
<CustomField>
    <fullName>CoOccurrenceScore__c</fullName>
    <label>Co-Occurrence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>