force-app/main/default/objects/Product2/fields/Is_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >TRUE for Software Subscription and Services products that should be included in renewal quotes. FALSE for Hardware and one-time products — excluded from renewals.</description>
    <label>Is Renewable</label>
    <type>Checkbox</type>
</CustomField>