force-app/main/default/objects/Product2/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <label>New Product</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>