force-app/main/default/objects/Product2/fields/OverstockedProduct__c.field-meta.xml
<CustomField>
    <fullName>OverstockedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overstocked Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>