force-app/main/default/objects/Product2/fields/PairedProduct__c.field-meta.xml
<CustomField>
    <fullName>PairedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paired Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Paired Product)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>