force-app/main/default/objects/Product2/fields/Reviews__c.field-meta.xml
<CustomField>
    <fullName>Reviews__c</fullName>
    <label>Review Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>