force-app/main/default/objects/Product2/fields/Specs__c.field-meta.xml
<CustomField>
    <fullName>Specs__c</fullName>
    <label>Technical Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>