force-app/main/default/objects/Product2/fields/Stock_Threshold_High__c.field-meta.xml
<CustomField>
    <fullName>Stock_Threshold_High__c</fullName>
    <label>Stock Threshold High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>