force-app/main/default/objects/Product2/fields/Stock_Threshold_Low__c.field-meta.xml
<CustomField>
    <fullName>Stock_Threshold_Low__c</fullName>
    <label>Stock Threshold Low</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>