force-app/main/default/objects/Product2/fields/StockStatus__c.field-meta.xml
<CustomField>
    <fullName>StockStatus__c</fullName>
    <label>Statut Stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boosted</fullName>
                <label>Boosté</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Buried</fullName>
                <label>Enfoui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>