force-app/main/default/objects/Product2/fields/StockThresholdHigh__c.field-meta.xml
<CustomField>
    <fullName>StockThresholdHigh__c</fullName>
    <label>Seuil Stock Haut (Boost)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
</CustomField>