force-app/main/default/objects/Product2/fields/StockThresholdLow__c.field-meta.xml
<CustomField>
    <fullName>StockThresholdLow__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Seuil Stock Bas (Enfouissement)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>