force-app/main/default/objects/Product2/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>