force-app/main/default/objects/Product2/fields/Visibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Score__c</fullName>
    <label>Visibility Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>