force-app/main/default/objects/Product2/fields/VisibilityScore__c.field-meta.xml
<CustomField>
    <fullName>VisibilityScore__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Score de Visibilité</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>